typestate-macro/tests/useless_state.stderr
error: Non-useful state.
 --> $DIR/useless_state.rs:9:12
  |
9 |     struct A {}
  |            ^
